feat(user): implement profile deletion
Add user profile deletion. It works as user anonymizer, so that all
the previous ladder leaderboard consistensy is not influenced by it.
